force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <formula>Approval_Rule__c != null &amp;&amp; Approver__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Needed</label>
    <type>Checkbox</type>
</CustomField>