force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Approval_Rule__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Rule</label>
    <referenceTo>Approval_Rule__c</referenceTo>
    <relationshipLabel>Opportunity Quote Line Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>