force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Approved&apos;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>