force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>