force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Quote_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>