force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Approver4__c.field-meta.xml
<CustomField>
    <fullName>Approver4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Quote_Line_Items3</relationshipName>
    <type>Lookup</type>
</CustomField>