force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Assigned_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Approvers__c</fullName>
    <formula>Approver__r.FirstName + &apos; &apos; +  Approver__r.LastName + 
IF( Approver2__c != null &amp;&amp; Approver2__c != Approver__c, &apos;, &apos; + Approver2__r.FirstName + &apos; &apos; + Approver2__r.LastName, &apos;&apos;) + 
IF( Approver3__c != null &amp;&amp; Approver3__c != Approver__c, &apos;, &apos; + Approver3__r.FirstName + &apos; &apos; + Approver3__r.LastName, &apos;&apos;) +
IF( Approver4__c != null &amp;&amp; Approver4__c != Approver__c, &apos;, &apos; + Approver4__r.FirstName + &apos; &apos; + Approver4__r.LastName, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Approvers</label>
    <type>Text</type>
</CustomField>