force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Billable_Account__c.field-meta.xml
<CustomField>
    <fullName>Billable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billable Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Quote Line Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>