force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Booking_Api_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Api_Id__c</fullName>
    <externalId>true</externalId>
    <label>Booking Api Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>