force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/City_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>City_ZipCode__c</fullName>
    <label>City ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>