force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Commission_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>Commission_Per_Order__c</fullName>
    <label>Commission Per Order</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>