force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>IF(TEXT(Line_Item_Type__c) == &apos;Service&apos;,Id_List_Service_Price__r.Company__r.Name, 
IF(TEXT(Line_Item_Type__c) == &apos;Product&apos;,Id_List_Product_Price__r.Company__r.Name, 
IF(TEXT(Line_Item_Type__c) == &apos;AddOn&apos;,Id_List_Add_On__r.Company__r.Name,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>