force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Contract_Addition__c.field-meta.xml
<CustomField>
    <fullName>Contract_Addition__c</fullName>
    <label>Contract Addition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>