force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Takeover</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
            <value>
                <fullName>Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>