force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>