force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/District_Id__c.field-meta.xml
<CustomField>
    <fullName>District_Id__c</fullName>
    <label>District Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>