force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Has_Related_Tarif__c.field-meta.xml
<CustomField>
    <fullName>Has_Related_Tarif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Related Tarif</label>
    <type>Checkbox</type>
</CustomField>