force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Id_List_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Add_On__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>List Add On</label>
    <referenceTo>List_Add_On__c</referenceTo>
    <relationshipLabel>Opportunity Quote Line Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>