force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Id_List_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Service_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id List Service Price</label>
    <referenceTo>List_Service_Price__c</referenceTo>
    <relationshipLabel>Opportunity Quote Line Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>