force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Id_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Quote Line Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>