force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Id_Opportunity_Quote__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote__c</fullName>
    <label>Opportunity Quote</label>
    <referenceTo>Opportunity_Quote__c</referenceTo>
    <relationshipLabel>Opportunity Quote Line Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>