force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Listed_Price__c.field-meta.xml
<CustomField>
    <fullName>Listed_Price__c</fullName>
    <label>Listed Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>