force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Migration_OppId__c.field-meta.xml
<CustomField>
    <fullName>Migration_OppId__c</fullName>
    <label>Migration OppId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>