force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Migration_OppQuoteProdId__c.field-meta.xml
<CustomField>
    <fullName>Migration_OppQuoteProdId__c</fullName>
    <label>Migration OppQuoteProdId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>