force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/OldOppQuoteLineId__c.field-meta.xml
<CustomField>
    <fullName>OldOppQuoteLineId__c</fullName>
    <label>OldOppQuoteLineId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>