force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Recurring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Fee__c</fullName>
    <label>Recurring Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>