force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Scaled__c.field-meta.xml
<CustomField>
    <fullName>Scaled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scaled</label>
    <type>Checkbox</type>
</CustomField>