force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4 EXT</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>A5 8 fold booklets</fullName>
            </value>
            <value>
                <fullName>A4 Square</fullName>
            </value>
            <value>
                <fullName>A4 Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>