force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Sub_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Name__c</fullName>
    <label>Sub-Product Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>