force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Subsidy__c</fullName>
    <label>Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>