force-app/main/default/objects/Opportunity_Quote_Line_Item__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>130g</fullName>
            </value>
            <value>
                <fullName>150g</fullName>
            </value>
            <value>
                <fullName>170g</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>