force-app/main/default/objects/Opportunity_Quote_Line_Item__c/recordTypes/AT_Opportunity_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>AT_Opportunity_Quote_Line_Item</fullName>
    <active>true</active>
    <label>AT Opportunity Quote Line Item</label>
</RecordType>