force-app/main/default/objects/Opportunity_Quote_Line_Item__c/recordTypes/CZ_Opportunity_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>CZ_Opportunity_Quote_Line_Item</fullName>
    <active>true</active>
    <description>Czech Republic Opportunity Quote Line Item</description>
    <label>CZ Opportunity Quote Line Item</label>
</RecordType>