force-app/main/default/objects/Opportunity_Quote_Line_Item__c/recordTypes/DE_Opportunity_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>DE_Opportunity_Quote_Line_Item</fullName>
    <active>true</active>
    <label>DE Opportunity Quote Line Item</label>
</RecordType>