force-app/main/default/objects/Opportunity_Quote_Line_Item__c/recordTypes/SE_Opportunity_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>SE_Opportunity_Quote_Line_Item</fullName>
    <active>true</active>
    <label>SE Opportunity Quote Line Item</label>
</RecordType>