force-app/main/default/objects/Opportunity_Quote_Line_Item__c/recordTypes/Talabat_Opportunity_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Opportunity_Quote_Line_Item</fullName>
    <active>true</active>
    <label>Talabat Opportunity Quote Line Item</label>
</RecordType>