force-app/main/default/objects/Opportunity_Quote_Line_Item__c/recordTypes/Yogiyo_Opportunity_Quote_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Opportunity_Quote_Line_Item</fullName>
    <active>true</active>
    <label>Yogiyo Opportunity Quote Line Item</label>
</RecordType>